# zhaojingying-cc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  LICENSE  README.md  django_admin_urls.py  django_settings.py  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/workflows/: docker-image.yml
ai/: chat_graph.py  config.py  custom_embeddings.py  tracing.py
ai/agents/: __init__.py  conversation_agent.py  emotion_agent.py  memory_agent.py  supervisor.py  supervisor_graph.py
ai/chat/: __init__.py  bubbles.py
ai/memory/: chat_day.py  conversation_summary.py  episodic.py  history_search.py  import_access.py  intent.py  reflection.py  reflection_jobs.py  semantic.py  style.py
ai/preprocessing/: chunk_analyzer.py  chunker.py  pipeline.py  relationship_overview.py  writer.py  (+1 more)
api/: asr.py  auth.py  character.py  chat.py  deps.py  errors.py  friend.py  homepage.py  import_data.py  memory.py  message.py  schemas.py  user.py  voice.py
docs/: 2026-07-11-product-architecture-roadmap.md  2026-07-13-companion-experience-plan.md  deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_agents.py  test_api_errors.py  test_character.py  test_clear_history.py  test_memory.py  test_memory_concurrency.py  test_memory_evidence_api.py  test_memory_incremental_index.py  test_memory_refactor.py  test_message_attachment.py  test_rag.py  test_semantic_index_delete.py  test_smoke.py  test_time_tools.py
tools/: sanitize_private_chat.py  wechat_parser.py
web/: admin.py
(+103 files in other folders)
