[project]
name = "zhaojingying-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.1",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "fastapi>=0.136.1",
    "jieba>=0.42.1",
    "lancedb>=0.30.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-prebuilt>=1.1.0",
    "openai>=2.37.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "python-socks>=2.8.1",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-django>=4.9"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_settings"
testpaths = ["tests"]
pythonpath = ["."]
